--- a/DroneManagementSys.uproject
+++ b/DroneManagementSys.uproject
@@ -32,7 +32,11 @@
 			"Enabled": true
 		},
 		{
-			"Name": "LearningAgents",
+			"Name": "SQLiteCore",
+			"Enabled": true
+		},
+		{
+			"Name": "SQLiteSupport",
 			"Enabled": true
 		}
 	]
